[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/space/Meteors/meteorBrown_big1.png" type="Texture" id=1]
[ext_resource path="res://scripts1/Base/Base_0.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/health_bar_red.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/health_bar_green.png" type="Texture" id=4]
[ext_resource path="res://scenes/Base/Baase_Area2D.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 101.5, 82.5 )

[node name="Base_Swarm" type="StaticBody2D" groups=["bases"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.160784, 0.0196078, 0.164706, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="Position2D" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 15
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 100, 80 )
shape = SubResource( 1 )

[node name="Resource" type="Label" parent="."]
margin_top = -29.0
margin_right = 203.0
margin_bottom = -8.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_bar" type="Label" parent="."]
margin_left = 30.0
margin_top = 169.0
margin_right = 96.0
margin_bottom = 183.0
rect_scale = Vector2( 2, 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnTimer" type="Timer" parent="."]

[node name="DieTimer" type="Timer" parent="."]

[node name="HP_bar2" type="TextureProgress" parent="."]
margin_top = 201.0
margin_right = 195.0
margin_bottom = 214.0
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
